<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.lakshminarayanabr.inclass03.MainActivity">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editTextName"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:hint="@string/string_name_placeholder"
        android:inputType="textPersonName"
        android:maxLength="@integer/intMax_nameLangth" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editTextEmail"
        android:layout_below="@+id/editTextName"
        android:layout_centerHorizontal="true"
        android:hint="@string/string_email_placeholder"
        android:inputType="textEmailAddress"
        android:maxLength="@integer/intMax_nameLangth" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_textVWDept"
        android:id="@+id/textViewDepartment"
        android:layout_below="@+id/editTextEmail"
        android:layout_marginTop="30dp"
        android:textSize="20sp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewDepartment"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/radioGroupDept">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/string_SIS"
            android:id="@+id/radioButtonSIS"
            android:textSize="20sp"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/string_CS"
            android:id="@+id/radioButtonCS"
            android:textSize="20sp"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/string_BIO"
            android:id="@+id/radioButtonBIO"
            android:textSize="20sp"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/string_Others"
            android:id="@+id/radioButtonOthers"
            android:textSize="20sp"/>
    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_mood"
        android:id="@+id/textViewMood"
        android:layout_below="@+id/radioGroupDept"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="40dp"
        android:textSize="20sp"/>

    <SeekBar
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:id="@+id/seekBarMood"
        android:layout_below="@+id/textViewMood"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:max="100" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/string_submit"
        android:id="@+id/buttonSubmit"
        android:layout_below="@+id/seekBarMood"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="30dp"/>

</RelativeLayout>
